# dockup

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  requirements.txt
.github/workflows/: binary.yml  release.yml
docker/: entrypoint.sh
src/: backup.py  backup.rs  config.py  config.rs  email.rs  email_service.py  logger.rs  main.py  main.rs  restore.rs  scanner.rs  utils.rs
