[package]
name = "dockup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive"] }
clap_complete = "4.5.47"
dirs = "6.0.0"
dotenv = "0.15.0"
flate2 = "1.1.1"
fs = "0.0.5"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls", "rustls-native-certs", "ring", "builder", "smtp-transport"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ssh2 = "0.9.5"
tar = "0.4.44"
tokio = { version = "1.44.2", features = ["full"] }
walkdir = "2.5.0"
yaml-rust = "0.4.5"
